<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>su.nightexpress.excellentenchants</groupId>
    <artifactId>ExcellentEnchants</artifactId>
    <packaging>pom</packaging>
    <version>5.4.3</version>
    <modules>
        <module>API</module>
        <module>Core</module>
        <module>tooltip-packetevents</module>
        <module>tooltip-protocollib</module>
        <module>compat-mythicmobs</module>
    </modules>

    <properties>
        <maven.compiler.release>25</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <luminol.version>26.2.build.726-stable</luminol.version>
        <nightcore.version>2.16.4</nightcore.version>
        <adventure.version>5.2.0</adventure.version>
        <guava.version>33.6.0-jre</guava.version>
        <slf4j.version>2.0.18</slf4j.version>
    </properties>

    <distributionManagement>
        <repository>
            <id>nightexpress</id>
            <url>https://repo.nightexpressdev.com/releases</url>
        </repository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>

        <repository>
            <id>nightexpress-releases</id>
            <url>https://repo.nightexpressdev.com/releases</url>
        </repository>

        <repository>
            <id>menthamc</id>
            <url>https://repo.menthamc.org/repository/maven-public/</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>bytecode.space</id>
            <url>https://repo.bytecode.space/repository/maven-public/</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <dependency>
            <groupId>su.nightexpress.nightcore</groupId>
            <artifactId>main</artifactId>
            <version>${nightcore.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-api</artifactId>
            <version>${adventure.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-minimessage</artifactId>
            <version>${adventure.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-logger-slf4j</artifactId>
            <version>${adventure.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

</project>
